# k8s-openapi-ext-rs

./: Cargo.toml  justfile
src/: ext.rs  get.rs  label.rs  lib.rs  quantity.rs
src/ext/: cluster_role.rs  cluster_role_binding.rs  configmap.rs  configmap_volume_source.rs  container.rs  container_port.rs  cronjob.rs  daemon_set.rs  deployment.rs  effect.rs  env.rs  hpa.rs  job.rs  label_selector.rs  local_object_reference.rs  metric.rs  namespace.rs  node.rs  owner_reference.rs  pod.rs  pod_spec.rs  pod_template_spec.rs  policy_rule.rs  probe.rs  replica_set.rs  replicaset.rs  role.rs  role_binding.rs  role_ref.rs  secret.rs  secret_env_source.rs  secret_reference.rs  secret_volume_source.rs  security_context.rs  service.rs  service_account.rs  service_port.rs  stateful_set.rs  statefulset.rs  storage_class.rs  (+7 more)
src/get/: component.rs  condition.rs  configmap.rs  container.rs  deployment.rs  namespace.rs  pod.rs  replica_set.rs  secret.rs  selfsubjectreview.rs  service.rs  service_port.rs  statefulset.rs
src/get/container/: ephemeral.rs  state.rs  status.rs
src/get/pod/: condition.rs
src/get/replicaset/: condition.rs
src/quantity/: format.rs  impls.rs  tests.rs
src/quantity/format/: scale.rs
src/quantity/format/scale/: binary.rs  decimal.rs
