[package]
name = "k8s-openapi-ext"
version = "0.0.30"
edition = "2021"
rust-version = "1.61"
description = "Collection of fluent builder traits for Kubernetes objects"
repository = "https://github.com/imp/k8s-openapi-ext-rs"
license = "Apache-2.0"


[dependencies]
base64 = "0.21"
k8s-openapi = { version = "0.20", features = [] }


[dev-dependencies]
serde_json = "1.0"


[dev-dependencies.k8s-openapi]
version = "0.20"
features = ["v1_28"]


[features]
pedantic = []


[package.metadata.docs.rs]
features = ["k8s-openapi/v1_28"]
