[package]
name = "k8s-openapi-ext"
version = "0.26.7"
edition = "2021"
rust-version = "1.83.0"
description = "Collection of fluent builder traits for Kubernetes objects"
repository = "https://github.com/imp/k8s-openapi-ext-rs"
license = "Apache-2.0"


[dependencies]
base64 = "0.22"
chrono = "0.4"
k8s-openapi = { version = "0.26", features = [] }
jiff = { version = "0.2", optional = true }
time = { version = "0.3", optional = true }


[dev-dependencies]
serde_json = "1.0"


[dev-dependencies.k8s-openapi]
version = "0.26"
features = ["latest"]


[features]
pedantic = []
jiff = ["dep:jiff"]
time = ["dep:time"]


[package.metadata.docs.rs]
features = ["k8s-openapi/latest", "jiff", "time"]
